src/test/ui/issues/10000-19999/issue-12187-2.rs
fn new<'r, T>() -> &'r T {
    panic!()
}

fn main() {
    let &v = new();
    //~^ ERROR type annotations needed
}
